[package]
name = "talos-tools"
version = "0.5.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]

[dependencies]
chrono = "0.2"
error-chain = "0.10"
lazy_static = "0.2"
libc = "0.2"
livesplit-core = "0.7"
notify = "4"
pancurses = "0.9"
read-process-memory = "0.1"
regex = "0.2"
serde = "1"
serde_derive = "1"
serde_yaml = "0.7"
timer = "0.1"

[target.'cfg(all(not(windows), not(target_os = "macos")))'.dependencies]
procps-sys = "0.1"
x11 = { version = "2.15", features = [ "xlib" ] }
